# whispervoice_app

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: __init__.py  main.py
src/audio/: __init__.py  resampler.py  wasapi_capture.py
src/hotkey/: __init__.py  global_hotkey.py
src/input/: __init__.py  send_input.py
src/metrics/: __init__.py  latency.py
src/stt/: __init__.py  whisper_stream.py
src/vad/: __init__.py  silero_vad.py
tests/: test_audio.py  test_hotkey.py  test_input.py  test_latency.py  test_stt.py  test_vad.py
